--- a/cssProyecto.css
+++ b/cssProyecto.css
@@ -1,72 +1,86 @@
-.cabecera{
+.cabecera {
 
-position: sticky;
-top: 0%;
-
+    position: sticky;
+    top: 0%;
 
 }
 
-header section{
+header section {
 
-display: flex;
-justify-content: space-between;
-background-color:beige;
-position: sticky;
-top: 0%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #333;
+    position: sticky;
+    top: 0%;
+    color: #fff;
 }
 
-nav ul{
-list-style: none;
-text-align: center;
+div nav ul {
+    list-style: none;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
 }
-nav ul li{
+
+div nav ul li {
     display: inline;
     margin: 20px;
-    
+
 }
 
-a{
+a {
     text-decoration: none;
-    
-}
-
-a:hover{
-text-decoration: underline;
 
 }
-#imgLogo{
-    width: 100px;
-    height: 200px;
+
+a:hover {
+    text-decoration: underline;
+
+
+}
+
+
+.logoYletras {
+    margin: 5px;
+
+}
+
+#imgLogo {
+    margin-left: 25px;
+    width: 50px;
+    height: 100px;
     border: solid 3px black;
     border-radius: 10px;
-   }
-#imgTelefono{
+}
+
+#imgTelefono {
     width: 50px;
     height: 50px;
     border: solid 3px black;
     border-radius: 10px;
 }
-#imgAgenda{
+
+#imgAgenda {
     width: 50px;
     height: 50px;
     border: solid 3px black;
     border-radius: 10px;
 }
-#Click{
-color: orange;
 
+main{
+    font-family: Spacemono, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #333;
+    background-color: #fff;
 }
 
-#y&{
-    color: black;
-
-}
-#Code{
-    color: darkviolet;
-}
-
-body{
-
-background-color: chocolate;
+footer{
+    display: flex;
+    justify-content: space-between;
+    background-color: #333;
+    position: sticky;
+    top: 0%;
+    color: #fff;
 
 }
